# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html

[metadata]
name = graven
description = disk imaging utility
author = elo
author_email = admin@example.com
license = MIT
license_files = LICENSE.txt
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/elo-enterprises/graven/
# Add here related links, for example:
project_urls =
    Documentation = https://github.com/elo-enterprises/graven/
    Source = https://github.com/elo-enterprises/graven/
    Download = https://github.com/elo-enterprises/graven/#files

# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
zip_ok = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

# Require a min/specific Python version (comma-separated conditions)
python_requires = >3.6

# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
# new major versions. This works if the required packages follow Semantic Versioning.
# For more information, check out https://semver.org/.
install_requires =
    importlib-metadata; python_version<"3.8"
    coloredlogs==15.0.1
    click
    six
    pyyaml
    pyparted==3.11.6
    pygments
    termcolor
    psutil

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# installed via `pip install .[testing]`
testing =
    versioneer
    tox
    pytest
    pytest-cov

# installed via `pip install .[dev]`
dev =
    tox
    pytest
    flake8
    j2cli
    autopep8
  
# installed via `pip install .[lint]`
lint =
    tox

# installed via `pip install .[publish]`
publish =
    twine

[options.package_data]
* = *.json

[options.entry_points]
# Add here console scripts like:
console_scripts =
     graven = graven.bin.graven:entry

[tool:pytest]
addopts =
    --cov graven --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[versioneer]
VCS = git
style = git-describe

versionfile_source = src/graven/_version.py
versionfile_build = graven/_version.py
tag_prefix =
parentdir_prefix = graven-

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
